fixed align-selft for khan__link

--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,4 +5,5 @@
   color: #2f80ed;
   text-decoration: none;
   margin: 0 48px;
+  align-self: flex-start;
 }
